# openstack-ansible-os_murano

./: .gitreview  CONTRIBUTING.rst  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py  index.rst
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py
tasks/: db_setup.yml  main.yml  mq_setup.yml  murano_import_libraries.yml  murano_install.yml  murano_post_install.yml
templates/: murano.conf.j2
vars/: distro_install.yml  main.yml
zuul.d/: project.yaml
